# UB_Poly16

./: .gitignore  CMakeLists.txt  README.md  THIRD_PARTY_LICENSES.md  build.ps1  make_installer.ps1
Source/: Arpeggiator.cpp  Arpeggiator.h  Effects.h  GrooveGrid.h  GrooveModel.h  MidiTools.h  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetBrowser.h  PresetManager.cpp  PresetManager.h  Scope.h  SynthVoice.cpp  SynthVoice.h  UBLookAndFeel.h
installer/: UB_Poly16.iss
